--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -35,11 +35,11 @@
             android:layout_alignParentEnd="true"
             android:layout_gravity="end"
             android:padding="5dp"
-            android:id="@+id/updateThemeButton"
+            android:id="@+id/changeThemeButton"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:background="@android:color/transparent"
-            android:text="Update theme"/>
+            android:text="See profile"/>
 
         <View
             android:layout_width="match_parent"
