--- a/app/src/main/res/layout/theme_fragment.xml
+++ b/app/src/main/res/layout/theme_fragment.xml
@@ -1,11 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
     android:padding="16dp">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="Change theme"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/backButton"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,8 +46,8 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
         <View
-            android:layout_width="30dp"
             android:id="@+id/currentChoice"
+            android:layout_width="30dp"
             android:layout_height="30dp"
             tools:background="@color/red" />
 
@@ -40,23 +67,23 @@
         android:orientation="horizontal">
 
         <View
+            android:id="@+id/theme1Choice"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginEnd="20dp"
-            android:id="@+id/theme1Choice"
             tools:background="@color/lightBlue" />
 
         <View
+            android:id="@+id/theme2Choice"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginEnd="20dp"
-            android:id="@+id/theme2Choice"
             tools:background="@color/lightYellow" />
 
         <View
+            android:id="@+id/theme3Choice"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:id="@+id/theme3Choice"
             tools:background="@color/lightPurple" />
     </LinearLayout>
 
